# Social_Media_Handle

./: CMakeLists.txt  README.md  functionalities.c  functionalities.h  graphs.c  graphs.h  helping_functions.c  login_page.c  login_page.h  main  main.c  main.txt
Groups/: G2  G3
Security/: encryption.c  encryption.h
folder/: AbhayMis  AmanSayy  AvaniSha  AvantiMo  Bhushans  GauriTak  HarshMar  Indrajee  ManthanKs  RashiSin  SachinSu  SharayuK  Shreyash  ShrutiRa  Siddhesh
header_files/: functionalities.h  graphs.h  helping_functions.h  login_page.h
source_files/: functionalities.c  graphs.c  helping_functions.c  login_page.c  main.c
